--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Help maintain the integrity of competitive programming by reporting and tracking Codeforces cheaters who used AI/GPT after 14/09/2024 (the AI rule change date)."
     />
+    <meta property="og:description" content="Help maintain the integrity of competitive programming by reporting and tracking Codeforces cheaters who used AI/GPT after 14/09/2024 (the AI rule change date)." />
+    <meta name="twitter:description" content="Help maintain the integrity of competitive programming by reporting and tracking Codeforces cheaters who used AI/GPT after 14/09/2024 (the AI rule change date)." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
